springDoc 적용, 문서 꾸미기

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,6 +44,8 @@ spring:
         format_sql: true
         highlight_sql: ture
         use_sql_comments: true
+springdoc:
+  default-produces-media-type: application/json
 # This setting makes console to show sql logs which JPA sent.
 logging:
   level:
